--- a/index.html
+++ b/index.html
@@ -140,6 +140,10 @@
                         <i class="fas fa-globe w-6 text-center mr-3 text-violet-400 transition-colors"></i>
                         <span>Website</span>
                     </a>
+                    <a href="https://discord.gg/DTwsB4Gt5E" target="_blank" class="neon-button group flex items-center justify-center w-full font-semibold py-4 px-5 rounded-xl transition-all duration-300 transform hover:-translate-y-1">
+                        <i class="fab fa-discord w-6 text-center mr-3 text-violet-400 transition-colors"></i>
+                        <span>Discord</span>
+                    </a>
                     <a href="https://www.tiktok.com/@margavoidd?is_from_webapp=1&sender_device=pc" target="_blank" class="neon-button group flex items-center justify-center w-full font-semibold py-4 px-5 rounded-xl transition-all duration-300 transform hover:-translate-y-1">
                         <i class="fab fa-tiktok w-6 text-center mr-3 text-violet-400 transition-colors"></i>
                         <span>TikTok</span>
